[gd_scene load_steps=5 format=3 uid="uid://d34atkyy3ddf"]

[ext_resource type="PackedScene" uid="uid://deche81a76i5" path="res://gui/gui_card.tscn" id="1_v3bub"]
[ext_resource type="Texture2D" uid="uid://m5xe26mril8f" path="res://resources/textures/game/logo.png" id="2_4eh0t"]
[ext_resource type="Script" path="res://gui/cards/main_gui_card.gd" id="2_okfnh"]
[ext_resource type="PackedScene" uid="uid://2wof4yi6nj5h" path="res://components/edition_predicate/edition_predicate.tscn" id="4_50m3r"]

[node name="MainGUICard" instance=ExtResource("1_v3bub")]
script = ExtResource("2_okfnh")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer" index="0"]
layout_mode = 2
texture = ExtResource("2_4eh0t")
stretch_mode = 3

[node name="StartButton" type="Button" parent="VBoxContainer" index="1" groups=["focus"]]
layout_mode = 2
text = "button.start"

[node name="OptionsButton" type="Button" parent="VBoxContainer" index="2"]
layout_mode = 2
text = "button.options"

[node name="QuitButton" type="Button" parent="VBoxContainer" index="3"]
layout_mode = 2
text = "button.quit"

[node name="EditionPredicate" parent="VBoxContainer/QuitButton" index="0" node_paths=PackedStringArray("_node") instance=ExtResource("4_50m3r")]
_node = NodePath("..")
_web_build = 2

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="push_card" binds= ["options"]]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
